fixed on mobile

--- a/css/style.css
+++ b/css/style.css
@@ -1,9 +1,12 @@
-@import url('https://fonts.googleapis.com/css2?family=Lato:wght@100;300;400;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Lato:wght@100;300;400;700;900&display=swap');
 
 html {
     color: #eee;
     background-color: #222;
     font-family: 'Lato', sans-serif;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 
 header {
@@ -11,7 +14,27 @@ header {
     padding: 2em 2em;
 }
 
-.button{
+@media screen and (max-width: 1280px) {
+    header {
+        align-items: start;
+    }
+
+    header h1 {
+        display: flex;
+        flex-direction: column;
+        align-items: start;
+    }
+
+    header .smol {
+        margin-top: 1em;
+    }
+
+    header .button {
+        margin-top: 1em;
+    }
+}
+
+.buttons {
     display: flex;
     flex: 99;
     justify-content: end;
@@ -26,15 +49,31 @@ header {
 
 h1 {
     font-size: 5em;
-    font-weight: 700;
+    font-weight: 900;
 }
 
 h1 .smol {
     font-size: 0.2em;
 }
 
+@media screen and (max-width: 1280px) {
+    h1 {
+        font-size: 3em;
+        font-weight: 900;
+    }
+    
+    h1 .smol {
+        font-size: 1rem;
+    }
+}
+
 h3 {
     font-size: 2em;
+    font-weight: 500;
+}
+
+h4 {
+  font-weight: 300;
 }
 
 h1,h3,h4 {
@@ -43,34 +82,80 @@ h1,h3,h4 {
 
 body {
     display: flex;
+    flex: 99;
     flex-direction: column;
-    height: calc(100vh - 16px)
+    height: calc(100vh - 16px);
+    max-width: 1600px;
 }
 
 h1,h2,h3,h4,h5,h6 {
     display: block;
     margin-block-start: 0;
     margin-block-end: 0;
-    text-overflow: ellipsis; 
+    text-overflow: ellipsis;
+    white-space: nowrap;
     overflow: hidden;
+    max-width: 100%;
 }
 
 main {
     display: grid;
-    grid-template-columns: 1fr 1fr 1fr 1fr;
+    grid-template-columns: 25% 25% 25% 25%;
     width: 100%;
     flex: 1;
+}
+
+@media screen and (max-width: 1280px) {
+    main {
+        grid-template-columns: 50% 50%;
+    }
+}
+
+@media screen and (max-width: 720px) {
+    main {
+        grid-template-columns: 1fr;
+    }
 }
 
 .tracks {
     display: flex;
     flex-direction: column;
-    margin: 32px;
+    margin: 16px;
     padding: 32px;
     cursor: pointer;
     background-image: linear-gradient(to bottom, #ddd, #aaa);
     color: #000;
     border-radius: 12px;
+}
+
+@media screen and (max-width: 1280px) {
+    .tracks {
+        margin: 16px;
+    }
+}
+
+@media screen and (max-width: 720px) {
+    .tracks {
+        flex-direction: row;
+        align-items: center;
+        max-width: calc(100vw - 64px);
+        padding: 16px;
+    }
+
+    .track-name {
+        margin-left: 1em;
+        display: block;
+        overflow: hidden;
+    }
+
+    .track-name h3,
+    .track-name h4 {
+        text-align: start;
+    }
+
+    .tracks-image {
+        min-width: 25vw;
+    }
 }
 
 .tracks.non {
@@ -82,6 +167,10 @@ main {
 .tracks.correct {
     background-image: linear-gradient(to bottom, #98e980, #6bca4f);
     opacity: 1;
+}
+
+.tracks.correct.anyway {
+    opacity: .3;
 }
 
 .tracks.correct .tracks-image {
@@ -100,6 +189,7 @@ main {
 
 .tracks-image {
     width: 100%;
+    max-width: 30vw;
     background-size: cover;
     background-position: center;
     margin-bottom: 1em;
@@ -112,4 +202,48 @@ main {
     content: "";
     display: block;
     padding-top: 100%;
+}
+
+nav {
+    display: none;
+}
+
+@media screen and (max-width: 720px) {
+    nav {
+        display: block;
+        position: sticky;
+        bottom: 0;
+        left: 0;
+        right: 0;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+    }
+    
+    .button {
+        flex: 1;
+    }
+
+    .buttons {
+        display: none;
+    }
+}
+
+.button {
+    margin: 16px;
+    padding: 16px 32px;
+    border-radius: 12px;
+    box-shadow: 0px 8px 16px rgba(20,20,20,.3);
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    cursor: pointer;
+}
+
+.button.play {
+    background-image: linear-gradient(to bottom, #3e722e, #275a19);
+}
+
+.button.next {
+    background-image: linear-gradient(to bottom, #646464, #555555);
 }
